--- a/Islander/Islander/Islander/Islander.csproj
+++ b/Islander/Islander/Islander/Islander.csproj
@@ -107,6 +107,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects\Boat.cs" />
+    <Compile Include="Objects\Bullet.cs" />
+    <Compile Include="Objects\Entity.cs" />
+    <Compile Include="Objects\Island.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Islander.cs" />
