--- a/Islander/Islander/Islander/Islander.csproj
+++ b/Islander/Islander/Islander/Islander.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Objects\Bullet.cs" />
     <Compile Include="Objects\Entity.cs" />
     <Compile Include="Objects\Island.cs" />
+    <Compile Include="Objects\PowerUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Islander.cs" />
