boat/island/input/communication changes

--- a/Islander/Islander/Islander/Islander.csproj
+++ b/Islander/Islander/Islander/Islander.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Islander.cs" />
     <Compile Include="Screen\BaseScreen.cs" />
     <Compile Include="Screen\GameOverScreen.cs" />
-    <Compile Include="Screen\GameScreen.cs" />
+    <Compile Include="Screen\MainGameScreen.cs" />
     <Compile Include="Screen\MainMenuScreen.cs" />
     <Compile Include="Screen\MenuScreen.cs" />
   </ItemGroup>
