Angle Bug Fix and Trail Start
Fixed Bullet Angle bug and added starting point for Bullet Trail, Also
fixed Yellow bullet visibility

--- a/Islander/Islander/Islander/Islander.csproj
+++ b/Islander/Islander/Islander/Islander.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Boat.cs" />
+    <Compile Include="Entity\BoatTrail.cs" />
     <Compile Include="Entity\Bullet.cs" />
     <Compile Include="Entity\EnemyBoat.cs" />
     <Compile Include="Entity\Entity.cs" />
