HUGE COMMIT WATCH OUT
Added:
-boat trails
-death splatters (with fade in and out!)
-cargo color powerups
-trident: triple shot
-bubble: pushes foe
-Razor: move faster
-Magnet: Homing at close range
-Added Tokens to islands indicating different colors visited
-Trade victory
-In Game music: The Zandali
-Shrunk islands and reduced boat and bullet speed for a more strategic
game.
-mulitple resources can be collected, and will trail behind the player
in a line

GET SOME!

--- a/Islander/Islander/Islander/Islander.csproj
+++ b/Islander/Islander/Islander/Islander.csproj
@@ -108,13 +108,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Boat.cs" />
-    <Compile Include="Entity\BoatTrail.cs" />
+    <Compile Include="Entity\Splatter.cs" />
     <Compile Include="Entity\Bullet.cs" />
     <Compile Include="Entity\EnemyBoat.cs" />
     <Compile Include="Entity\Entity.cs" />
     <Compile Include="Entity\Island.cs" />
     <Compile Include="Entity\PowerUp.cs" />
     <Compile Include="Entity\Resource.cs" />
+    <Compile Include="Entity\Token.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
